--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+  background-color: #151229;
+  
+}
+
 :root {
   --purple-dark: #27233A;
   --purple-light: #443D66;
@@ -15,6 +20,7 @@ body {
   margin: 0 auto;
   padding: 20px 20px;
   font-family: sans-serif;
+  box-shadow: 0px 0px 30px black;
 }
 
 #pageTitle {
@@ -25,10 +31,21 @@ body {
   margin: 0px;
 }
 
-#intro-flex-box {
+#grid-and-profile-flex-box {
   display: flex;
   height: 30vw;
   max-height: 250px;
+}
+
+#software-grid-title {
+  margin-left: auto;
+  margin-right: min(1vw, 8px); /* margin-right should match grid cell padding */
+  font-style:italic;
+  
+}
+
+#title-flex-box {
+  display: flex;
 }
 
 .red-outline {
