--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ hr {
 }
 
 #introductorySectionBody {
-  max-width: 700px;
+  max-width: 800px;
   padding: 70px 50px;
   margin: 0 auto;
 }
@@ -427,6 +427,10 @@ h1.project-description-section-header a:hover {
 
 .full-project-hyperlink path {
   stroke:white;
+}
+
+.project-container-covered-by-anchor .full-project-hyperlink {
+  pointer-events:none;
 }
 
 .project-container-covered-by-anchor:hover .full-project-hyperlink, .full-project-hyperlink:hover {
