--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ hr {
   text-decoration: none;
   text-align:left;
   color: var(--text-color);
-  padding: 10px;
+  padding: 20px 20px;
   background-color: var(--project-card-background-color);
   margin: 0px;
   margin-bottom: 3px;
